tests/errors/cSigWrongMilo.milo
// @error: Milo declares a 4-byte return
// The C signature is right, but the Milo declaration disagrees with it: `long` is 8
// bytes, i32 is 4. This is the Milo<->C mapping check — the half that a header-only
// comparison can't catch.
@cSig("unistd.h", "long sysconf(int)")
extern fn sysconf(name: i32): i32

fn main() {
    print(sysconf(29))
}
